# fast-api_tutorial

./: .env  README.md  generic.py  main.py  pyproject.toml
app/: api.py  app.py  config.py  db.py  imagekit.py  test.py  users.py
app/crud/: PostCrud.py  base.py  post.py
app/db/: db.py  posts.py  users.py
app/routers/: post.py  posts.py
app/schemas/: imagekit.py  post.py  schema.py  users.py
